#806 - Query builder icons overlap fix (#808)

--- a/frontend/assets/css/sira.css
+++ b/frontend/assets/css/sira.css
@@ -123,10 +123,6 @@
     overflow-y: auto;
     width: 100% !important;
 }
-.side-querypanel #add-condition-group{
-   position: relative;
-   left: 60px;
-}
 .side-querypanel #attributeFilterPanel .logicHeader .col-xs-5 {
     width: 50% !important;
 }
